--- a/app/assets/stylesheets/media_queries.scss
+++ b/app/assets/stylesheets/media_queries.scss
@@ -1,7 +1,13 @@
 @media (max-width: 768px) {
   .main-content {
     padding: 1em;
-    padding-top: 120px;
+    padding-top: 0px;
+    & h1 {
+      text-align: center;
+    }
+  }
+  .container{
+    margin: auto;
   }
 }
 @media (min-width: 768px) {
